@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- PHP/Mapscript: added "autofollow" and "repeatdistance" in labelObj (#3175)
+
 - Added charset in content-type http header for wms/wfs/sos/wcs requests (#2583)
 
 Version 5.6.0-beta4 (2009-10-18):
